[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a2ltool-py"
version = "0.2.0"
description = "A tool to edit, merge and update A2L (ASAM MCD-2 MC) files – Python port"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Your Name" }]
dependencies = [
    "pyelftools>=0.31",
    "pefile>=2023.2.7; platform_system == 'Windows'",
    "pdbparse>=1.5; platform_system == 'Windows'",
]

[project.scripts]
a2ltool = "a2ltool.cli:main"

[tool.setuptools.packages.find]
where = ["."]